# iter74

./: .clang-format  CMakeLists.txt  README.md  iter.nanorc  sunc.nanorc
.github/workflows/: ci.yml
core/: iptr.sunc  macr.sunc  math.sunc  znum.sunc
examples/: add2.iter  add_many.iter  test.iter
include/: arena.h  scanner.h  tokenizer.h  utils.h
src/: arena.c  main.c  scanner.c  tokenizer.c  utils.c
tests/: CMakeLists.txt  test_arena.c  test_scanner.c  test_tokenizer.c  test_vec.c  test_vec_align.c  test_vec_int.c  test_vec_pair.c
